# datn

./: README.md  docker-compose.override.yml  docker-compose.yml
backend/: .env-example
backend/app/: alembic.ini  prestart.sh  pyproject.toml
backend/app/alembic/versions/: 50c4c73abfb6_user_custom_word.py  6916858de03d_add_column_description_table_subject.py  73ab9ace5531_add_table_learned_word.py  8295138216f6_update_column_sample_mean.py  b16144ee7dab_update_column_table_word.py  eb1e303f0814_first_revision.py
backend/app/app/: backend_pre_start.py  main.py  utils.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: login.py  sample.py  subject.py  user_words.py  users.py  words.py
backend/app/app/core/: config.py
backend/app/app/crud/: __init__.py  base.py  crud_sample.py  crud_subject.py  crud_user.py  crud_user_word.py  crud_word.py
backend/app/app/db/: base.py  init_db.py
backend/app/app/models/: __init__.py  sample.py  subject.py  user.py  word.py
backend/app/app/schemas/: __init__.py  sample.py  subject.py  user.py  word.py
backend/app/app/tests/: conftest.py
backend/app/app/tests/api/api_v1/: test_subjects.py  test_users.py  test_words.py
backend/app/app/tests/utils/: utils.py  word.py
backend/app/scripts/: test.sh
backend/config_files/: backend.dockerfile
