[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Vu Minh Tri <vmtniichov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.11.3"
fastapi = "^0.54.1"
requests = "^2.23.0"
pydantic = "^1.8"
gunicorn = "^20.0.4"
jinja2 = "^2.11.2"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^1.4"
pytest = "^5.4.1"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
passlib = "^1.7.4"
emails = "^0.6"
python-multipart = "^0.0.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
